<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/requestsFragment"
        android:icon="@drawable/ic_requests"
        android:title="@string/requests_lbl"
        android:enabled="true" />

    <item
        android:id="@+id/orderHistoryFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        android:enabled="true" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications_st"
        android:enabled="true" />

    <item
        android:id="@+id/myAccountFragment"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        android:enabled="true" />

<!--    <item-->
<!--        android:id="@+id/moreFragment"-->
<!--        android:icon="@drawable/ic_more"-->
<!--        android:title="@string/more"-->
<!--        android:enabled="true" />-->

</menu>