<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.unicom.waslak_client.ui.user.MapFragment">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.mancj.materialsearchbar.MaterialSearchBar
            android:id="@+id/addressBar"
            style="@style/MaterialSearchBarLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:fontFamily="@font/cairo_regular"
            android:textSize="@dimen/dimen_16sp"
            app:mt_hint="@string/chose_adres"
            app:mt_maxSuggestionsCount="10"
            app:mt_placeholder="@string/chose_adres"
            app:mt_searchBarColor="#eee"
            app:mt_searchIconTint="#00D472"
            app:mt_speechMode="false"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_50dp"
            android:scaleType="centerCrop"
            android:translationY="-18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/pin" />

        <LinearLayout
            android:id="@+id/controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/dimen_8dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/dragg_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/dimen_5dp"
                android:text="@string/confirm"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_18dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_pickup"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:text="@string/confirm_pick_up"
                app:cornerRadius="@dimen/dimen_10dp"
                app:icon="@drawable/ic_notifications"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/dimen_16dp" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/get_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/controls"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dimen_8dp"
            app:fabSize="normal"
            app:elevation="@dimen/dimen_16dp"
            app:rippleColor="@color/colorPrimary"
            app:backgroundTint="@color/white"
            app:borderWidth="@dimen/dimen_3dp"
            app:pressedTranslationZ="@dimen/dimen_12dp"
            app:srcCompat="@drawable/my_location_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/dimen_16dp"
            app:layout_constraintBottom_toTopOf="@id/controls" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>