<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="forgetPassViewModel"
            type="com.unicom.waslak_client.viewmodel.guest.ForgetPasswordViewModel" />

        <variable
            name="fragment"
            type="com.unicom.waslak_client.ui.guest.forget.ForgetPasswordFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraint"
        android:layout_width="match_parent"
        android:layout_height='match_parent'
        android:background="@drawable/gradient_bg">

        <FrameLayout
            android:id="@+id/progress_bar_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:progressBarStyleHorizontal"
                android:theme="@style/ProgressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:indeterminate="true"
                android:visibility="@{forgetPassViewModel.isLoading == null || forgetPassViewModel.isLoading ? fragment.view.VISIBLE : fragment.view.GONE}" />
        </FrameLayout>

        <ImageView
            android:id="@+id/constraintLayout"
            android:layout_width="@dimen/dimen_248dp"
            android:layout_height="@dimen/dimen_132dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_wasellak_logo_white" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:hint="@string/user_email_hint"
            android:textColorHint="@color/white"
            android:theme="@style/TextLabel"
            app:boxCornerRadiusBottomEnd="@dimen/dimen_6dp"
            app:boxCornerRadiusBottomStart="@dimen/dimen_6dp"
            app:boxCornerRadiusTopEnd="@dimen/dimen_6dp"
            app:boxCornerRadiusTopStart="@dimen/dimen_6dp"
            app:boxStrokeColor="#fff"
            app:boxStrokeWidth="@dimen/dimen_0.5dp"
            app:boxStrokeWidthFocused="@dimen/dimen_1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:hintTextColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cairo_bold"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingTop="@dimen/dimen_8dp"
                android:paddingEnd="@dimen/dimen_16dp"
                android:paddingBottom="@dimen/dimen_8dp"
                android:singleLine="true"
                android:text="@={forgetPassViewModel.email}"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forget_btn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60dp"
            android:layout_margin="@dimen/dimen_24dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/cairo_bold"
            android:onClick="@{()->forgetPassViewModel.onSendClick()}"
            android:enabled="@{forgetPassViewModel.enableButton}"
            android:text="@string/send"
            android:textColor="@color/salGreen"
            android:textSize="@dimen/dimen_16sp"
            app:cornerRadius="@dimen/dimen_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_layout_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_login"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:fontFamily="@font/cairo_bold"
            android:gravity="center"
            android:onClick="@{()->fragment.onClickLogin()}"
            android:text="@string/go_signin_txt"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_btn"
            app:layout_constraintVertical_bias="0.3"
            app:strokeColor="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>